--- a/css/styles.css
+++ b/css/styles.css
@@ -10,3 +10,24 @@ hr {
     border-width: 5px;
     width: 5%;   
 }   
+
+h1{
+    color:#395B64;
+}
+
+h3{
+    
+    color:#395B64;
+}
+
+p{
+    color:#E7F6F2;
+}
+
+ul{
+    color:#E7F6F2;
+}
+
+table{
+    color:#E7F6F2;
+}
