--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ body {
 
 hr {
     border-style:dotted none none;
-    border-color:white;
+    border-color:#2C3333;
     border-width: 5px;
     width: 5%;   
 }   
